@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-12-06T08:20:45Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -1, +2 ],
+  "count" : 2,
+  "count_minmax" : [ 2, 2 ],
+  "count_decinc" : [ -0, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
