@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-05T16:22:35Z",
+  "timestamp" : "2022-12-06T08:20:45Z",
   "count_outdated" : 2644,
   "uniques_outdated" : 719,
-  "count" : 2661,
-  "uniques" : 727,
+  "count" : 2662,
+  "uniques" : 728,
   "clones" : [
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -58,6 +58,13 @@
       "timestamp": "2022-12-04T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-12-06T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
