@@ -1,10 +1,10 @@
 {
-  "count": 17,
-  "uniques": 4,
+  "count": 18,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -40,6 +40,11 @@
     {
       "timestamp": "2022-12-04T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-06T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
