@@ -1,3 +1,11 @@
+2022-12-06T08:20:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3627741173 # 1093
+* notice: last 14d: unq all: 5 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 719 2644 / 727 2661
+* notice: next accum: outdated-unq outdated-all / unq all: 719 2644 / 728 2662
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-22 2022-12-06]
+
 2022-12-05T16:22:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3621944388 # 1091
 * notice: last 14d: unq all: 4 17
